# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rock-paper-scissors-lizard-spock"
version = "3.0.0"
authors = [
  { name="seanl", email="your-email@example.com" },
]
description = "A script to play Rock-Paper-Scissors-Lizard-Spock against the computer, with ASCII art."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment",
    "Environment :: Console",
]
# Your game has no external runtime dependencies.
# If you had any, like 'requests', you would list them here:
# dependencies = [
#   "requests",
# ]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
rpsls = "rockPaperScissorsLizardSpock:main"